--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,7 @@
     <section class="vh-100">
         <div class="container h-100">
 
-            <div id="initialScreen" class="h-100"  style = "display: none;">
+            <div id="initialScreen" class="h-100" >
                 <div class="d-flex flex-column align-items-center justify-content-center h-100">
                     <h1>Cities</h1>
                     <button
@@ -38,7 +38,7 @@
                 </div>
               </div>
 
-              <div id="gameScreen" class="h-100">
+              <div id="gameScreen" class="h-100"  style = "display: none;">
 
                 <ul id = "msg"></ul>
                     <form action="" id = "form">
