--- a/client/index.html
+++ b/client/index.html
@@ -40,13 +40,13 @@
 
               <div id="gameScreen" class="h-100"  style = "display: none;">
 
+                <h1>Your game code is: <span id="gameCodeDisplay"></span></h1>
                 <ul id = "msg"></ul>
                     <form action="" id = "form">
                         <input type="text" id = "input">
                         <input type="submit" value="Submit">
                     </form>
-                    <h1>Your game code is: <span id="gameCodeDisplay"></span></h1>
-
+                    <button id = "giveUp">Сдаюсь</button>
               </div>
 
         </div>
